package protocol;


message ServerRequest {
    required int64 request_id = 1;

    optional SubmitTask submit = 2;
    optional SubscribeTask subscribe = 3;
    optional ListTask list = 4;
}

message ServerResponse {
    required int64 request_id = 1;

    optional SubmitTaskResponse submitResponse = 2;
    optional SubscribeTaskResponse subscribeResponse = 3;
    optional ListTaskResponse listResponse = 4;
}

enum Status {
    OK = 1;
    ERROR = 2;
}

message Task {
    message Param {
        oneof param_value {
            int64 value = 1;
            int64 dependentTaskId = 2;
        }
    }

    required Param a = 1;
    required Param b = 2;
    required Param p = 3;
    required Param m = 4;
    required Param n = 5;
}

message SubmitTask {
    required Task task = 1;
}

message SubmitTaskResponse {
    required Status status = 1;
    required int64 submittedTaskId = 2;
}

message SubscribeTask {
    required int64 taskId = 1;
}

message SubscribeTaskResponse {
    required Status status = 1;
    optional int64 value = 2;
}

message ListTask {
}

message ListTaskResponse {
    message TaskDescription {
        required int64 taskId = 1;
        required Task task = 2;
        optional int64 result = 3;
    }

    required Status status = 1;
    repeated TaskDescription tasks = 2;
}